--- a/debug.html
+++ b/debug.html
@@ -34,7 +34,7 @@
     }
     function printTime(){
       var date = new Date();
-      return date.getHours() + ':' + ("0" + date.getMinutes()).slice(-2) + ':' + date.getSeconds();
+      return date.getHours() + ':' + ("0" + date.getMinutes()).slice(-2) + ':' + ("0" + date.getSeconds()).slice(-2);
     }
 
     $('#headername').html('Name: '+ config.name);
@@ -68,10 +68,10 @@
         if (j===config.serial[i].averages-2 && config.serial[i].numerical)
           row.append($('<td>').html( 'Average last ' + config.serial[i].averages));
         if (j===config.serial[i].averages-1 && config.serial[i].numerical)
-          row.append($('<td>').attr('id', config.serial[i].name));
+          row.append($('<td>').attr('id', config.serial[i].name + 'avg'));
       }
     }
-    console.log($);
+
     var socket = io();
     socket.on('entry', function(msg){
       for(var i = 0; i<config.serial.length; i++)
@@ -79,16 +79,22 @@
           break;  //store value of i for correct serial entry
 
       for(var j = 0; j<config.serial[i].averages; j++){
-        if (j<config.serial[i].averages-1)
+        if (j<config.serial[i].averages-1){
+          $('#' + config.serial[i].name+'time'+j).html($('#' + config.serial[i].name+'time'+(j + 1)).html());
           $('#' + config.serial[i].name+'entry'+j).html($('#' + config.serial[i].name+'entry'+(j + 1)).html());
-        else
+        }
+        else{
+          $('#' + config.serial[i].name+'time'+j).html(printTime());
           $('#' + config.serial[i].name+'entry'+j).html(msg.entry);
+        }
       }
     });
     socket.on('average', function(msg){
       for(var i = 0; i<config.serial.length; i++)
-        if (msg.name===config.serial[i].name)
-          $(config.serial[i].name+'avg').html(msg.entry);
+        if (msg.name===config.serial[i].name){
+          console.log(config.serial[i].name+'avg');
+          $('#' + config.serial[i].name+'avg').html(Math.round(msg.entry*1000)/1000);
+        }
     });
   </script>
 </body>
