--- a/settings.html
+++ b/settings.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <h1>Settings for com 0</h1><br>
-<table id="com0">
+<table id="com0" style="display: inline-block;">
   <tr>
     <td><input type="number" id="baudrate" min="0" step="1"></td>
     <td>Baudrate</td>
@@ -65,7 +65,7 @@
   <tr>
 </table>
 <h1>Settings for com 1</h1><br>
-<table id="com1">
+<table id="com1" style="display: inline-block;">
   <tr>
     <td><input type="number" id="baudrate" min="0" step="1"></td>
     <td>Baudrate</td>
