--- a/debug.html
+++ b/debug.html
@@ -9,7 +9,7 @@
       td { text-align: center; font-size: 20px; border-style: bold; }
       .header { background-color: yellow;}
       .result { background-color: #98FB98;}
-      .buttons {position: fixed; right: 0; top: 30px;}
+      .buttons {position: fixed; right: 0; top: 30px; font-size:20;}
     </style>
 </head>
 <body>
