--- a/settings.html
+++ b/settings.html
@@ -122,9 +122,7 @@
 
 
     function goDebug(){
-      if (confirm("Do you want to go back?")){
-        window.location.href = '/'; //relative to domain
-      }
+      window.location.href = '/';
     }
 
     function setSettings(){
