--- a/debug.html
+++ b/debug.html
@@ -10,7 +10,7 @@
       td { text-align: center; font-size: 20px; border-style: bold; }
       .header { background-color: yellow;}
       .result { background-color: #98FB98;}
-      .buttons {position: fixed; right: 0; top: 30px; font-size:20;}
+      .buttons {position: fixed; right: 0; top: 30px; font-size:20px;}
     </style>
 </head>
 <body>
@@ -25,7 +25,9 @@
   </table>
   <div class = "buttons">
     <img src = "/settings.svg" height="30" width="30" onclick="javascript:goSettings()">
+
     <img src = "/restart.ico"  height="30" width="30" onclick="javascript:goRestart()">
+    
     <img src = "/shutdown.ico" height="30" width="30" onclick="javascript:goShutdown()">
   </div>
   <script src="/socket.io/socket.io.js"></script>
