added timeout on repeating inputs

--- a/settings.html
+++ b/settings.html
@@ -73,6 +73,11 @@
       <td>Take average</td>
     </tr>
     <tr>
+      <td><input type="number" id="timeout0" min="0" step="1"></td>
+      <td><input type="number" id="timeout1" min="0" step="1"></td>
+      <td>Timeout in milliseconds</td>
+    </tr>
+    <tr>
       <td><input type="number" id="entries0" min="0" step="1"></td>
       <td><input type="number" id="entries1" min="0" step="1"></td>
       <td>Number of entries</td>
